# mat

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  Taskfile.yml
.github/workflows/: ci.yml
crates/mat/: Cargo.toml
crates/mat-controller/: Cargo.toml
crates/mat-controller/examples/: ble-scan.rs
crates/mat-controller/src/: asn1.rs  attestation.rs  ble.rs  btp.rs  case.rs  cert.rs  commissioning.rs  counter.rs  crypto.rs  dnssd.rs  exchange.rs  fabric.rs  group.rs  group_settings.rs  im.rs  kvs.rs  lib.rs  message.rs  pase.rs  session.rs  setup_code.rs  spake2p.rs  tlv.rs  transport.rs  x509.rs
crates/mat-controller/tests/: btp_pase_plumbing.rs  case_self_handshake.rs  live_all_clusters.rs  live_case_im.rs  live_commission_ble.rs  live_commission_real.rs  live_commissioning.rs  live_jarvis.rs  live_matd_group.rs  live_matd_native.rs
crates/mat-controller/tests/fixtures/: README.md
crates/mat-core/: Cargo.toml
crates/mat-core/src/: acl.rs  alias.rs  body.rs  color.rs  diag.rs  error.rs  group.rs  ids.rs  ids_gen.rs  lib.rs  mesh.rs  normalize.rs  output.rs  parse.rs  reachability.rs  socket.rs  store.rs
crates/mat-native/: Cargo.toml
crates/mat-native/src/: commission.rs  group.rs  group_settings.rs  iface_select.rs  lib.rs  ops.rs  test_support.rs
crates/mat/src/: cli.rs  main.rs  matd_client.rs  native_direct.rs  probe.rs  resolve.rs  runner.rs
crates/mat/src/commands/: commission.rs  describe.rs  diag.rs  discover.rs  fabric.rs  group.rs  invoke.rs  mod.rs  open_window.rs  read.rs  write.rs
crates/mat/tests/: integration.rs  listen.rs  matd_auto.rs
crates/mat/tests/fixtures/: fake-avahi-browse.sh  fake-chip-tool.sh  fake-ping6.sh
crates/matd/: Cargo.toml
crates/matd/src/: backend.rs  lib.rs  lock.rs  main.rs  native.rs  protocol.rs  server.rs  subscribe_config.rs  subscription.rs
crates/matd/tests/: cli.rs  integration.rs
docs/superpowers/plans/: 2026-06-29-discover-probe-reachability.md  2026-06-29-mat-diag-node.md  2026-06-30-diag-node-self-fabric-cfid.md  2026-07-01-matd-stop-single-instance.md  2026-07-02-alias-resolution.md  2026-07-02-mat-matd-auto-discovery.md  2026-07-03-alias-toml.md  2026-07-06-color-command.md  2026-07-07-group-provision-acl.md  2026-07-09-color-spec-group-shortcuts.md  2026-07-09-group-provision-rebind.md  2026-07-10-matd-ws-keepalive.md  2026-07-10-phase5-m1-controller-core.md  2026-07-11-phase5-m2-case-im.md  2026-07-11-phase5-m2b-self-issued-noc.md  2026-07-12-phase5-m3-kvs-jarvis.md  2026-07-12-phase5-m4-matd-native-adapter.md  2026-07-12-phase5-m5-group-native.md  2026-07-13-phase5-m6a-commissioning.md  2026-07-13-phase5-m6b-ble-thread-commissioning.md  2026-07-15-phase5-m7-native-mat.md  2026-07-16-phase5-m8a-generic-im-native.md  2026-07-17-phase5-m8b-discover-native.md  2026-07-17-phase5-m8c1-commission-native.md  2026-07-17-phase5-m8c2-groupsettings-native.md  2026-07-17-phase5-m8c3-native-default.md  2026-07-19-matd-resident-mdns-cache.md  2026-07-20-level-percent-shortcut.md  2026-07-20-matd-subscribe-listen.md  2026-07-21-matd-borndead-detection.md  2026-07-21-matd-socket-subdir-default.md  2026-07-21-matd-subscribe-priming-weight-fix.md  2026-07-22-refactor-shared-body-classify.md  2026-07-22-v1-quality-error-classification.md  2026-07-23-diag-mesh-topology.md  2026-07-23-post-v1-defer-quality-fixes.md  2026-07-24-matd-state-cache-op-soundness.md
docs/superpowers/specs/: 2026-06-29-discover-probe-reachability-design.md  2026-06-29-mat-diag-node-design.md  2026-06-30-diag-node-self-fabric-cfid-design.md  2026-07-01-matd-stop-single-instance-design.md  2026-07-02-alias-resolution-design.md  2026-07-02-mat-matd-auto-discovery-design.md  2026-07-07-group-provision-acl-design.md  2026-07-09-group-provision-rebind-design.md  2026-07-10-matd-ws-keepalive-design.md  2026-07-10-phase5-backend-direction-design.md  2026-07-10-phase5-m2-case-im-design.md  2026-07-11-phase5-m2b-self-issued-noc-design.md  2026-07-12-phase5-m3-kvs-jarvis-design.md  2026-07-12-phase5-m4-matd-native-adapter-design.md  2026-07-12-phase5-m5-group-native-design.md  2026-07-13-phase5-m6a-commissioning-design.md  2026-07-13-phase5-m6b-ble-thread-commissioning-design.md  2026-07-15-phase5-m7-native-mat-design.md  2026-07-16-phase5-m8a-generic-im-native-design.md  2026-07-17-phase5-m8b-discover-native-design.md  2026-07-17-phase5-m8c1-commission-native-design.md  2026-07-17-phase5-m8c2-groupsettings-native-design.md  2026-07-17-phase5-m8c3-native-default-design.md  2026-07-19-matd-resident-mdns-cache-design.md  2026-07-20-level-percent-shortcut-design.md  2026-07-20-matd-subscribe-listen-design.md  2026-07-20-resolve-timeout-exit-code-design.md  2026-07-21-matd-borndead-detection-design.md  2026-07-21-matd-socket-subdir-default-design.md  2026-07-21-matd-subscribe-live-report-fix-design.md  2026-07-21-matd-subscribe-priming-weight-fix-design.md  2026-07-22-refactor-shared-body-classify-design.md  2026-07-23-diag-mesh-topology-design.md  2026-07-23-post-v1-defer-quality-fixes-design.md  2026-07-23-priming-diff-recovery-design.md  2026-07-23-readme-restructure-accuracy-sweep-design.md  2026-07-24-matd-op-expectation-noop-fix-design.md
scripts/: e2e-m2.sh  e2e-m3.sh  e2e-m4.sh  e2e-m5.sh  e2e-m6-real.sh  e2e-m6.sh  e2e-m6b-real.sh  e2e-m7.sh  e2e-m8a-real.sh  e2e-m8b-real.sh  e2e-m8c1-real.sh  e2e-m8c2-real.sh  e2e-m8c3-real.sh  gen-ids.py
src/: cli.rs  error.rs  main.rs  output.rs  parse.rs  runner.rs  store.rs
src/commands/: commission.rs  describe.rs  discover.rs  group.rs  invoke.rs  mod.rs  open_window.rs  read.rs  write.rs
tests/: integration.rs
tests/fixtures/: fake-chip-tool.sh
