[package]
name = "mat"
version = "0.0.0"
edition = "2021"
description = "Matter device control CLI — normalizes chip-tool output to a structured JSON schema"
license = "MIT"
repository = "https://github.com/nogu3/mat"

[[bin]]
name = "mat"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
