[workspace]
resolver = "2"
members = ["crates/mat-core", "crates/mat", "crates/matd"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nogu3/mat"

[workspace.dependencies]
mat-core = { path = "crates/mat-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
getrandom = "0.2"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
