[workspace]
resolver = "2"
members = ["crates/mat-core", "crates/mat", "crates/matd", "crates/mat-controller", "crates/mat-native"]

[workspace.package]
version = "0.27.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nogu3/mat"

[workspace.dependencies]
mat-core = { path = "crates/mat-core" }
mat-controller = { path = "crates/mat-controller" }
mat-native = { path = "crates/mat-native" }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
getrandom = "0.2"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
