[package]
name = "mat-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "From-scratch Matter controller library (Phase 5 backend)"

[dependencies]
tokio = { version = "1", features = ["net", "time", "rt", "macros"] }
ccm = "0.5"
aes = "0.8"
base64ct = { version = "1", features = ["alloc"] }
getrandom = { workspace = true }
sha2 = "0.10"
sha1 = "0.10"
hkdf = "0.12"
hmac = "0.12"
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
