[package]
name = "mat-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "From-scratch Matter controller library (Phase 5 backend)"

[features]
# BLE commissioning (bluer は libdbus にリンクするため隔離。
# 本番 mat/matd の musl クロスビルドはこの feature を使わない)
ble = ["dep:bluer", "dep:futures-util"]

[dependencies]
tokio = { version = "1", features = ["net", "time", "rt", "macros", "io-util", "sync"] }
ccm = "0.5"
aes = "0.8"
base64ct = { version = "1", features = ["alloc"] }
getrandom = { workspace = true }
sha2 = "0.10"
sha1 = "0.10"
hkdf = "0.12"
hmac = "0.12"
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
socket2 = "0.6"
rustix = { version = "1", features = ["fs"] }
tracing = { workspace = true }
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"], optional = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tracing-subscriber = { workspace = true }
tempfile = "3"

[[example]]
name = "ble-scan"
required-features = ["ble"]

[[test]]
name = "live_commission_ble"
required-features = ["ble"]
