[package]
name = "mat"
description = "Matter device control CLI — normalizes chip-tool output to a structured JSON schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mat"
path = "src/main.rs"

[dependencies]
mat-core.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
