[package]
name = "mat"
description = "Matter device control CLI — normalizes chip-tool output to a structured JSON schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mat"
path = "src/main.rs"

[features]
ble = ["mat-native/ble"]

[dependencies]
mat-core.workspace = true
mat-controller.workspace = true
mat-native.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { version = "1", features = ["rt", "net", "time"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
mat-native = { workspace = true, features = ["test-support"] }
tokio = { version = "1", features = ["macros", "rt"] }
