[package]
name = "matd"
description = "Matter resident layer daemon (Phase 4) — warm CASE sessions over mat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "matd"
path = "src/main.rs"

[dependencies]
mat-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
