[package]
name = "matd"
description = "Matter resident daemon (Phase 4) — warm CASE sessions over mat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "matd"
path = "src/main.rs"

[dependencies]
mat-core.workspace = true
mat-controller.workspace = true
mat-native.workspace = true
async-trait.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
    "signal",
] }
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
mat-native = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
